--- a/lms/borrow/templates/pickup_code_entry.html
+++ b/lms/borrow/templates/pickup_code_entry.html
@@ -24,6 +24,10 @@
                class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 font-medium">
                 Code Entry & Pickup
             </a>
+            <a href="{% url 'borrow:active_borrowings_list' %}" 
+               class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 font-medium">
+                Active Borrowings & Returns
+            </a>
             <a href="{% url 'borrow:extension_requests_list' %}" 
                class="px-4 py-2 bg-orange-600 text-white rounded-md hover:bg-orange-700 font-medium">
                 Extension Requests
